# bragbrag

./: .gitignore  README.MD  README.org  pyproject.toml  requirements.txt  setup.cfg  tox.ini
logging_configs/: config.json
src/bragbrag/: __main__.py  base.py  cli.py  jsonlogger.py  main.py
src/bragbrag/logging_configs/: config.json
tests/: test_main.py
