[metadata]

name = bragbrag
description = My implementation of a rag agent
author = Bray Moll
readme = "README.org"
version = 0.0.1

[options]
packages =
   bragbrag


install_requires =
   numpy >= 2.1.0
   pandas >= 2.2.0
   uvicorn >= 0.32.0
   fastapi >= 0.115.4
python_requires = >=3.10

package_dir =
  =src

zip_safe = no

[options.extras_require]
testing =
    pytest>= 8.0
    pytest-cov>=5.0
    mypy >= 1.0.0
    flake8>=7.0.0
    tox>=4.0.0
    pre-commit>=4.0.0


[options.package_data]
bragbrag = py.typed

[flake8]
max-line-length = 88
